--- a/European Import-Export Geoanalysis.ipynb
+++ b/European Import-Export Geoanalysis.ipynb
@@ -2,7 +2,15 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bad557df",
+   "id": "e137f710",
+   "metadata": {},
+   "source": [
+    "# European Import-Export Geoanalysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6511fc29",
    "metadata": {},
    "source": [
     "### Importing data: countries' position and import/export flows \n",
@@ -14,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "e93dd2cd",
+   "id": "77ff9ba1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "id": "ce07b67c",
+   "id": "e6987f89",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +61,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2276067f",
+   "id": "8edf69a9",
    "metadata": {},
    "source": [
     "### Cleaning datasets\n",
@@ -63,7 +71,7 @@
   {
    "cell_type": "code",
    "execution_count": 31,
-   "id": "9f9562de",
+   "id": "dee45356",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +98,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9555ba4",
+   "id": "d3f7bd0e",
    "metadata": {},
    "source": [
     "### Adding latitude and longitude information\n",
@@ -100,7 +108,7 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "21a53f17",
+   "id": "9176e635",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6e37d4d8",
+   "id": "a7bd90cb",
    "metadata": {},
    "source": [
     "### Merging countries' datasets \n",
@@ -142,7 +150,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "4b0b1208",
+   "id": "9b2038a3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +191,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7798f994",
+   "id": "7dc79159",
    "metadata": {},
    "source": [
     "### Mapping Imports and Exports\n",
@@ -204,7 +212,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "ce5bd1b4",
+   "id": "9a943e9a",
    "metadata": {},
    "outputs": [
     {
@@ -36245,7 +36253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f15d6c24",
+   "id": "8694b885",
    "metadata": {},
    "source": [
     "### Conclusion \n",
@@ -36257,11 +36265,11 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4d6cb561",
+   "id": "37621437",
    "metadata": {},
    "source": [
     "### Further considerations \n",
-    "The value of this project can be  easilyextended by using the same analysis with different partner countries or observing different timeframes. "
+    "The value of this project can be easily extended by using the same analysis with different partner countries or observing different timeframes. "
    ]
   }
  ],
